crates/viewer_support/re_dataframe_ui/tests/snapshots/filter_tests__string_list@outer_null_DoesNotContain_ab.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: String(
        StringFilter {
            operator: DoesNotContain,
            query: "ab",
        },
    ),
    field: Field {
        name: "column",
        data_type: List(
            Field {
                name: "column",
                data_type: Utf8,
            },
        ),
        nullable: true,
    },
    unfiltered: ListArray
    [
      StringArray
    [
      "hello_ab",
      "a",
    ],
      null,
      StringArray
    [
      "ab",
      "A B",
    ],
    ],
    filtered: ListArray
    [
      null,
    ],
}
